manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mutanuq
  namespace: mutanuq
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: mutanuq
  ports:
    - name: http
      port: 80
