manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mutanuq
  namespace: mutanuq
spec:
  rules:
    - host: mutanuq.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mutanuq
                port:
                  number: 80

  tls:
  - hosts:
    - mutanuq.trueberryless.org
    secretName: mutanuq
